# mtg-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt
.github/workflows/: docker-publish.yml
assets/: index.html
scripts/: generate_image.py
src/: main.rs
